Update suggestions contracts
