# src/ClientBarometer/Contracts/Responses/Suggestions.cs
@@ -5,11 +5,13 @@ namespace ClientBarometer.Contracts.Responses
 {
     public class Suggestions
     {
-        public class Suggestion
-        {
-            public Guid Id;
-            public string Text;
-        }
         public Suggestion[] Messages { get; set; }
+    }
+
+    public class Suggestion
+    {
+        public Guid Id { get; set; }
+
+        public string Text { get; set; }
     }
 }
